# SIC-XE-Assembler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Run.sh  RunTests.sh  debug.h  def.h  format.sh  input.sic  opcode.info  run.cpp  run.sh
.github/workflows/: format.yml  test.yml
Input/: error_program2.txt  error_program3.txt  error_program4.txt  error_program5.txt  input_sample.txt  input_with_CSECT.txt  input_with_error.txt  test_program1.txt  test_program2.txt  test_program3.txt  test_program4.txt  test_program6.txt
Output/: error_expected.txt  error_generated.txt  error_program1_expected.txt  error_program2_expected.txt  error_program3_expected.txt  error_program4_expected.txt  error_program5_expected.txt  output_sic.txt  test_program1_generated.txt  test_program2_expected.txt  test_program3_generated.txt  test_program4_expected.txt  test_program4_generated.txt  test_program5_expected.txt  test_program6_expected.txt
data/: opcode.info
include/: debug.h  def.h  initialize.h  pass1.h  pass2.h  record.h  utils.h
src/: assembler.cpp
tests/: CMakeLists.txt  assembler_test.cc
tools/color/: color.h
tools/data/: opcode.info
